--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 </head>
 <body>
 <h1 id="ZEER">ZEER</h1>
-<p><img src="https://raw.githubusercontent.com/ZEERDEER/ZEER/main/ZEER.png" alt="avatar" width="100" height="100"></p>
+<p><img src="https://raw.githubusercontent.com/ZEERDEER/zeerdeer.github.io/main/ZEER.png" alt="avatar" width="100" height="100"></p>
 <h2 id="about-me">About Me</h2>
 <p>游戏玩家。</p>
 <p>冲浪达人，电视剧、动漫。</p>
