--- a/index.html
+++ b/index.html
@@ -180,5 +180,6 @@ href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Email <a href="mailto:zeerdeer@gmail.com">zeerdeer@gmail.com</a></p>
 <p>Telegram <a href="https://t.me/ZEERDEER"><span class="citation"
 data-cites="ZEERDEER">@ZEERDEER</span></a></p>
+<iframe src="https://ip.skk.moe/simple" style="width: 100%; border: 0"></iframe>
 </body>
 </html>
