--- a/index.html
+++ b/index.html
@@ -180,6 +180,6 @@ href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Email <a href="mailto:zeerdeer@gmail.com">zeerdeer@gmail.com</a></p>
 <p>Telegram <a href="https://t.me/ZEERDEER"><span class="citation"
 data-cites="ZEERDEER">@ZEERDEER</span></a></p>
-<iframe src="https://ip.skk.moe/simple" id="myIframe"></iframe> <script> var iframe = document.getElementById("myIframe"); iframe.requestFullScreen = iframe.webkitRequestFullscreen || iframe.mozRequestFullScreen || iframe.requestFullscreen; iframe.requestFullScreen(); </script>
+<div> IP Location <iframe src="https://ip.skk.moe/simple" style="width: 100%; height: 100%" seamless allowfullscreen></iframe> </div>
 </body>
 </html>
