--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <p>冲浪达人，电视剧、动漫。</p>
 <h2 id="digital-life">Digital Life</h2>
 <p>Twitter <a href="https://twitter.com/ZEERDEER"><span class="citation"
-data-cites="oran_ge">@ZEERDEER</span></a></p>
+data-cites="ZEERDEER ">@ZEERDEER</span></a></p>
 <p>YouTube <a
 href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Github <a href="https://github.com/ZEERDEER">ZEERDEER</a></p>
@@ -180,6 +180,6 @@ href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Email <a href="mailto:zeerdeer@gmail.com">zeerdeer@gmail.com</a></p>
 <p>Telegram <a href="https://t.me/ZEERDEER"><span class="citation"
 data-cites="ZEERDEER">@ZEERDEER</span></a></p>
-<div> IP Location <iframe src="https://ip.skk.moe/simple" style="width: 100%; height: 100%" seamless allowfullscreen></iframe> </div>
+<iframe src="https://ip.skk.moe/simple" style="width: 100%; height: 100%; border: 0" seamless allowfullscreen></iframe>
 </body>
 </html>
