--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>ZEER</title>
   <style>
+    /* 6-Salt and Pepper: */
+
+.saltAndPepper {
+    background:  
+        linear-gradient(-180deg, rgba(255, 255, 255, 0.50) 2%, rgba(0, 0, 0, 0.50) 100%),
+        radial-gradient(51% 97%, #E8E8E8 7%, #CCCCCC 97%);
+    background-blend-mode: multiply;
+}
     html {
       color: #1a1a1a;
       background-color: #fdfdfd;
