--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   <title>ZEER</title>
   <style>
     /* 6-Salt and Pepper: */
-
-.saltAndPepper {
-    background:  
-        linear-gradient(-180deg, rgba(255, 255, 255, 0.50) 2%, rgba(0, 0, 0, 0.50) 100%),
-        radial-gradient(51% 97%, #E8E8E8 7%, #CCCCCC 97%);
-    background-blend-mode: multiply;
-}
+      .saltAndPepper {
+        background:  
+          linear-gradient(-180deg, rgba(255, 255, 255, 0.50) 2%, rgba(0, 0, 0, 0.50) 100%),
+          radial-gradient(51% 97%, #E8E8E8 7%, #CCCCCC 97%);
+        background-blend-mode: multiply;
+      }
+    </style>
+  </head>
+  <body class="saltAndPepper">
+    <!-- your content here -->
+  </body>
     html {
       color: #1a1a1a;
       background-color: #fdfdfd;
