--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>ZEER</title>
   <style>
-    /* 6-Salt and Pepper: */
-      .saltAndPepper {
-        background:  
-          linear-gradient(-180deg, rgba(255, 255, 255, 0.50) 2%, rgba(0, 0, 0, 0.50) 100%),
-          radial-gradient(51% 97%, #E8E8E8 7%, #CCCCCC 97%);
-        background-blend-mode: multiply;
-      }
-  <body class="saltAndPepper">
-    <!-- your content here -->
+    /* 11-Early Morning: */
+.earlyMorning {
+  background: 
+      linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%),
+      radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
+  background-blend-mode: screen;
+}
     html {
       color: #1a1a1a;
       background-color: #fdfdfd;
@@ -189,5 +187,6 @@ href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Email <a href="mailto:zeerdeer@gmail.com">zeerdeer@gmail.com</a></p>
 <p>Telegram <a href="https://t.me/ZEERDEER"><span class="citation"
 data-cites="ZEERDEER">@ZEERDEER</span></a></p>
+<body class="saltAndPepper">
 </body>
 </html>
