--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Email <a href="mailto:zeerdeer@gmail.com">zeerdeer@gmail.com</a></p>
 <p>Telegram <a href="https://t.me/ZEERDEER"><span class="citation"
 data-cites="ZEERDEER">@ZEERDEER</span></a></p>
-<body class="saltAndPepper">
+<body class="earlyMorning">
   <!-- your content here -->
 </body>
 </html>
