--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     /* 11-Early Morning: */
 .earlyMorning {
+    z-index: 9999;
   background: 
       linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%),
       radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
