--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <style>
     /* 11-Early Morning: */
 .earlyMorning {
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
   background: 
       linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%),
       radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
