--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ href="https://www.youtube.com/@ZEER">@ZEER</a></p>
 <p>Github <a href="https://github.com/ZEERDEER">ZEERDEER</a></p>
 <h2 id="contact">Contact</h2>
 <p>Email <a href="mailto:zeerdeer@gmail.com">zeerdeer@gmail.com</a></p>
-<p>Telegram <a href="https://t.me/ZEERDEER"><span class="citation"
-data-cites="ZEERDEER">@ZEERDEER</span></a></p>
+<p>Telegram <a href="https://t.me/ZEER"><span class="citation"
+data-cites="ZEER">@ZEER</span></a></p>
 </body>
 </html>
