--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         body {
             /* Elegant minimalist hotel interior style background */
-            background: url('https://images.unsplash.com/photo-1522771739844-6a9f6d5f14af?ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80') no-repeat center center fixed;
+            background: url('https://images.unsplash.com/photo-1722073625278-297cbe7df903?auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
             background-size: cover;
             min-height: 100vh;
             display: flex;
