--- a/index.html
+++ b/index.html
@@ -1049,8 +1049,8 @@
                         <div style="width: 100%; padding: 18px 18px 18px 70px; font-size: 1.1rem; color: #000; font-weight: bold;">Ghost Of Tsushima Legend Mode</div>
                     </div>
                     <div class="input-group" style="position: relative;">
-                        <div class="icon-container"><img src="https://img.122200.xyz/SplitFiction.jpg" style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></div>
-                        <div style="width: 100%; padding: 18px 18px 18px 70px; font-size: 1.1rem; color: #000; font-weight: bold;">Split Fiction</div>
+                        <div class="icon-container"><img src="https://img.122200.xyz/RiseoftheRonin.png" style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></div>
+                        <div style="width: 100%; padding: 18px 18px 18px 70px; font-size: 1.1rem; color: #000; font-weight: bold;">Rise of the Rōnin</div>
                     </div>
                     <div class="submit-container">
                         <p class="responsible-text">ʟᴏᴠᴇ ɪs ᴏʀᴀɴɢᴇ, ɪs ᴡᴀʀᴍ, ɪs ʜᴇʀᴇ.</p>
