--- a/admin.html
+++ b/admin.html
@@ -75,12 +75,24 @@
             border: none;
             color: #666;
             font-size: 1.2rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
 
         .icon-btn:hover {
             background-color: rgba(255, 255, 255, 0.9);
             transform: translateZ(10px) scale(1.1);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+        }
+
+        .icon-btn svg {
+            width: 20px;
+            height: 20px;
+            fill: #666;
+            transition: fill 0.3s ease;
+        }
+
+        .icon-btn:hover svg {
+            fill: #9c7c5a;
         }
 
         .title {
@@ -266,8 +278,16 @@
         <div class="header">
             <div class="logo">zeer</div>
             <div class="nav-buttons">
-                <button id="homeBtn" class="icon-btn" title="返回主页">🏠</button>
-                <button id="logoutBtn" class="icon-btn" title="退出登录">🚪</button>
+                <button id="homeBtn" class="icon-btn" title="返回主页">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M12 2L2 12h3v9h14v-9h3L12 2zm-2 16v-7h4v7h-4z"/>
+                    </svg>
+                </button>
+                <button id="logoutBtn" class="icon-btn" title="退出登录">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/>
+                    </svg>
+                </button>
             </div>
         </div>
 
