--- a/admin.html
+++ b/admin.html
@@ -79,14 +79,13 @@
             border: none;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             position: relative;
-            z-index: 100;
-            transform: translateZ(50px);
+            transform: translateZ(20px);
         }
 
         .icon-btn:hover {
             background: #4a4a4a;
-            transform: translateZ(10px) scale(1.1);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+            transform: translateZ(40px) scale(1.1) translateY(-2px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .icon-btn svg {
@@ -159,8 +158,12 @@
             font-size: 0.9rem;
             transition: all 0.3s ease;
             position: relative;
-            z-index: 100;
-            transform: translateZ(40px);
+            transform: translateZ(20px);
+        }
+
+        .btn:hover {
+            transform: translateZ(35px) translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .btn-edit {
@@ -246,14 +249,13 @@
             margin-top: 10px;
             position: relative;
             overflow: hidden;
-            z-index: 100;
-            transform: translateZ(50px);
+            transform: translateZ(25px);
         }
 
         .btn-submit:hover {
             background: #4a4a4a;
-            transform: translateZ(10px) scale(1.1);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            transform: translateZ(45px) scale(1.1) translateY(-2px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .btn-submit:active {
@@ -401,32 +403,20 @@
                 // 获取容器的位置和尺寸
                 const rect = container.getBoundingClientRect();
 
-                // 检查鼠标是否在容器内且不在互动元素上
-                const isInside =
-                    e.clientX >= rect.left &&
-                    e.clientX <= rect.right &&
-                    e.clientY >= rect.top &&
-                    e.clientY <= rect.bottom;
-
-                const isOverInteractive = e.target.closest('button') || e.target.closest('a') || e.target.closest('input');
-
-                // 只有当鼠标在容器内且完全不在按钮/输入框上时才应用3D效果
-                if (isInside && !isOverInteractive) {
-                    // 计算鼠标相对于容器中心的位置（-1到1之间）
+                // 应用倾斜效果
+                if (isInside) {
                     const centerX = rect.left + rect.width / 2;
                     const centerY = rect.top + rect.height / 2;
                     const mouseX = e.clientX - centerX;
                     const mouseY = e.clientY - centerY;
 
-                    // 计算旋转角度（最大±3度）
-                    const rotateY = mouseX / (rect.width / 2) * -3;
-                    const rotateX = mouseY / (rect.height / 2) * 3;
+                    const rotateY = mouseX / (rect.width / 2) * 5;
+                    const rotateX = mouseY / (rect.height / 2) * -5;
 
-                    // 应用变换
-                    container.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.01)`;
+                    container.style.transition = 'transform 0.1s ease-out';
+                    container.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.03)`;
                 } else {
-                    // 鼠标不在容器内，或正在操作按钮/输入框，立即重置旋转
-                    container.style.transition = 'transform 0.2s ease-out, box-shadow 0.4s ease';
+                    container.style.transition = 'transform 0.4s ease';
                     container.style.transform = 'perspective(1000px) rotateX(0) rotateY(0) scale(1)';
                 }
 
