--- a/admin.html
+++ b/admin.html
@@ -437,7 +437,7 @@
         async function fetchGames() {
             const token = sessionStorage.getItem('authToken');
             try {
-                const response = await fetch(`/.netlify/functions/games?t=${Date.now()}`, {
+                const response = await fetch(`https://games-api.zeerunko.workers.dev?t=${Date.now()}`, {
                     headers: { 'Authorization': token }
                 });
 
@@ -488,7 +488,7 @@
             if (!confirm('确定要删除这个游戏吗？')) return;
             const token = sessionStorage.getItem('authToken');
             try {
-                const response = await fetch(`/.netlify/functions/games`, {
+                const response = await fetch(`https://games-api.zeerunko.workers.dev`, {
                     method: 'DELETE',
                     headers: { 'Authorization': token },
                     body: JSON.stringify({ id })
@@ -519,7 +519,7 @@
             saveBtn.disabled = true;
 
             try {
-                const response = await fetch('/.netlify/functions/games', {
+                const response = await fetch('https://games-api.zeerunko.workers.dev', {
                     method: 'POST',
                     headers: { 'Authorization': token, 'Content-Type': 'application/json' },
                     body: JSON.stringify({ id, steamId })
